--- a/styles/style.css
+++ b/styles/style.css
@@ -27,3 +27,36 @@ p {
     padding: 10px;
 }
 
+main {
+   max-width: 840px; 
+}
+
+aside {
+    width: 20rem ;
+    margin: 1rem;
+    border: 1px ;
+    padding: 1rem ;
+    background-color: lightblue;
+    color: #FF1493 ;
+
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+main img {
+    width: 150px;
+    height: auto;
+
+}
+
+p {
+    padding: 0;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
