--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,14 @@
+:root {
+    --my-favorite-color:steelblue;
+} 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 nav {
     background-color: steelblue;
     padding: 10px;
