--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
 h1 {
     font-weight: 400;
@@ -11,37 +12,73 @@ h1 {
     box-sizing: border-box;
 }
 :root {
-    --background-color:#a7c957 ;
-    --color: #6A993E;
-    --padding: 20px;
-    --border: 2px solid #f2e8cf;
+    :root {
+        --primary-color: #A7C957;
+        --secondary-color: #6A994E;
+        --accent1-color:#BC4749;
+        --accent2-color: #F2E8CF;
+        --padding: 2rem;
+        --border: 2px solid black;
+    
+    }
 }
 
-h1, h2, h3, h4, h5, h6 {font-family: 'Roboto+Slab','Afacad+Flux';}
+
 
 body {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-display : swap;
-    src : url(https://fonts.gstatic.com/s/robotoslab/v34/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjojISWaA.ttf) format('truetype');
-    src : url(https://fonts.gstatic.com/s/afacadflux/v1/9oRgNYYQryMlneUPykRmTuH4ET0fri4I5rJVT_CWHKDZnskVK5edsX4XZaQ.ttf) format('truetype');
-    color: black;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: var(--accent1-color);
+
+}
+
+main {
+    background-color: var(--primary-color);
 }
 
 header {
-    background-color: var(--background-color);
-    padding: var(--padding)
+    padding: 10px;
+    background-color:#a7c957  ;
+    margin: 1rem auto;
+    display: grid;
+    grid-template-columns: 500px 4fr 1fr;
+    border-bottom: 1px solid black;
+    align-items: center;
+    
+}
+nav {
+    padding: 1.5rem;
+    display: flex;
+    justify-content: space-around;
+    vertical-align: middle;
+}
+nav a {
+    font-family: 'Open Sans', serif;
+    font-weight: bold;
+    font-size: 16pt;
+    color: var(--primary-color);
 
+}
+p {
+    font-size: 14pt;
+    color: var(--accent1-color);
 }
 
 .hero {
-    background-image: url('images/rafting57-hero.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 400px;
+    margin: 1rem;
+    padding: var(--padding);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
 }
-
+.hero img {
+    display: block;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
 .hero img {
     display: block;
     width: 100%;
@@ -60,7 +97,7 @@ header {
     top: 60px;
     text-align: center;
     display: block;
-    background-color: #6A994E(6,69,134,0.5);
+    background-color: #6A994E (6,69,134,0.5);
     color: #bc4749;
     position: absolute;
 }
@@ -73,25 +110,146 @@ header {
     position: absolute;
     color: #bc4749;
 }
-
+.hero-box article {
+    margin: 0;
+    padding: var(--padding)
+}
 .hero-box img {
     width: 100px;
     height: auto;
     float: right;
 }
-  
-.history {
-    margin: 1rem;
-    padding: var(--padding);
-    color: bc4749;
 
+section {
+    margin: 2rem;
+    padding: var(--padding);
+}
+
+
+.history {
+    display: grid;
+    grid-template-rows: 30% 40% 30%;
+    grid-template-rows: 20% 80%;
+    border: 2px solid var(--accent1-color);
+    margin: 10px;
+    color: #bc4749;
+}
+.history h2{
+    font-size: 20pt;
+    font-weight : bold;
+    grid-column: 1/4;
+    grid-row: 1/2;
+    text-align: center;
+}
+.history img {
+    width: 200px;
+    height: auto;
+    grid-column: 2/3;
+    grid-row-start: 2;
+    margin: 10px;
+    border:2px solid #bc4749;
+}
+
+.column-1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin: 10px;
+}
+
+.column-2 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    margin: 10px;
+}
+.adventure {
+    display: grid;
+    place-items: center;
+    border: 2px solid var(--accent1-color);
+    margin: 10px;
+    grid-template-columns: repeat(5,20%);
+    grid-template-rows: 20% 80%;
+
+}
+.adverture h2 {
+    font-size: 20pt;
+    grid-column: 1 / span 6;
+    grid-row: 1 / 2;
+    text-align: center;
+}
+.adventure img {
+    grid-column: 1 / span 6;
+    grid-row: 2 / 3;
+    width: 200px;
+    height: auto;
+    border:2px solid var(--accent1-color);
+}
+
+
+
+figure img {
+    width: 100%;
+    height: 90%;
+    object-fit: cover;
+}
+
+figcaption {
+    background-color: #6A994E;
+    color:#bc4749;
+    padding: 5px; 
+    text-align: center;
+    font-size: 14;
 }
 
 .social-media a {
-    text-decoration: none;
+    position: absolute;
+    top: 0;
+    right: 20px;
 }
-
+.sociallinks img {
+    width: 30px;
+    margin-left: 10px;
+}
 footer {
-    border-top: 1px solid #6A994E;
-    text-align: center;
-}
+        display: grid;
+        place-items: center;
+        grid-template-columns: 70% 10% 10% 10%;
+        grid-template-rows: 70% 30%;
+        border: 1px solid #6A994E;
+        background-color: #BBBE64;
+        font-family: 'Robota Slab',serif;
+       
+    }
+    
+    .copyrights {
+        grid-column: 1/2;
+        grid-row: 1/3;
+        color:var(--primary-color);
+        font-size: 16pt;
+        font-weight: bold;
+        text-align: center;
+    }
+    
+    .facebook-logo {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .facebook {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .twitter-logo {
+        grid-column: 3/4;
+        grid-row: 1/2;
+    }
+    .twitter {
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+    .instagram-logo {
+        grid-column: 4/5;
+        grid-row: 1/2;
+    }
+    .instagram {
+        grid-column: 4/5;
+        grid-row: 2/3;
+    }
