--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -99,18 +99,20 @@ p {
     top: 60px;
     text-align: center;
     display: block;
-    background-color: #6A994E (6,69,134,0.5);
-    color: #bc4749;
+    width: 100%;
+    background-color: var(--secondary-color)(6,69,134,0.5);
+    color: var(--accent1-color);
     position: absolute;
 }
+
     
 .hero-box article {
     width: 80%;
     height: 30%;
     padding: var(--padding);
     background-color: #6A994E(6,69,134,0.5); 
-    position: absolute;
-    color: #bc4749;
+    position:absolute;
+    color: var(--accent1-color)
 }
 
 .hero-box article {
