--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,46 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
-h1 {
-    font-weight: 400;
-}
-
-
-
-* {
-    margin: 20px;
-    padding: 10px;
-    box-sizing: border-box;
-}
 :root {
-        --primary-color: #A7C957;
-        --secondary-color: #6A994E;
-        --accent1-color:#BC4749;
-        --accent2-color: #F2E8CF;
-        
+    --primary-color: #A7C957;
+    --secondary-color: #6A994E;
+    --accent1-color:#BC4749;
+    --accent2-color: #F2E8CF;
 
-        --padding: 2rem;
-        --border: 2px solid black;
-    
-    }
-
-
-
+    --nav-background-color: #366641;
+    --nav-link-color: white;
+    --nav-hover-link-color: #d8f3d6;
+    --nav-hover-background-color: #000000;
+}
 
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    color: var(--accent1-color);
-
-}
-
-main {
-    background-color: var(--primary-color);
+    background-color: var(--nav-background-color);
 }
 
 header {
     padding: 10px;
-    background-color:#a7c957  ;
+    background-color: var(--nav-background-color) ;
     margin: 1rem auto;
     display: grid;
     grid-template-columns: 500px 4fr 1fr;
@@ -48,19 +29,29 @@ header {
     align-items: center;
     
 }
+
+main {
+    background-color: var(--primary-color);
+}
+
+img {
+    width: 150px;
+}
+
 nav {
-    padding: 1.5rem;
+    padding: 1rem;
     display: flex;
     justify-content: space-around;
-    vertical-align: middle;
+    align-items: center;
+    font-size: 2rem;
 }
 nav a {
     font-family: 'Open Sans', serif;
-    font-weight: bold;
-    font-size: 16pt;
-    color: var(--primary-color);
-
+    display: block;
+    color: var(--text-color) ;
+    text-decoration: none;      
 }
+
 p {
     font-size: 14pt;
     color: var(--accent1-color);
@@ -69,127 +60,90 @@ p {
 /* Class Selectors */
 
 .hero {
-    margin: 1rem;
-    padding: var(--padding);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
 }
+
 .hero img {
     display: block;
     width: 100%;
     height: auto;
-    background-size: cover;
 }
-.hero img {
-    display: block;
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    background-color:#6A994E;
-    padding: 20px;
-    border: 2px solid #bc4749;
-}
+
 .hero h1 {
-    font-family: "Open Sans", sans-serif;;
-    font-size: 45pt;
-    top: 60px;
-    text-align: center;
-    display: block;
-    width: 100%;
-    background-color: rgba(74, 232, 121, 0.5);
-    color: #F2E8CF;
     position: absolute;
+    top: 8px;
+    left: 0;
+    padding: 15px 541px 15px;
+    color: black;
+    background-color: var(--accent2-color) ;
+    opacity: 0.8;
 }
+
 
     
-.hero-box article {
-    width: 80%;
-    height: 30%;
-    padding: var(--padding);
-
+article {
+    position: absolute;
+    top: 200px;
+    left: 50px;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    background-color: var(--primary-color) ;
+    opacity: 0.8;
+    border: 10px;
+    color:black ;
 }
 
-.hero-box article {
-    margin: 0;
-    padding: var(--padding)
-}
-.hero-box img {
-    width: 100px;
-    height: auto;
+article img {
     float: right;
+    max-width: 300px;
+    height: auto;
 }
-
-section {
-    margin: 2rem;
-    padding: var(--padding);
-}
-
-
-.history {
-    display: grid;
-    grid-template-rows: 30% 40% 30%;
-    grid-template-rows: 20% 80%;
-    border: 2px solid var(--accent1-color);
-    margin: 10px;
-    color: #bc4749;
-}
-.history h2{
-    font-size: 20pt;
-    font-weight : bold;
-    grid-column: 1/4;
-    grid-row: 1/2;
+.history h2 {
     text-align: center;
 }
-.history img {
-    width: 200px;
-    height: auto;
-    grid-column: 2/3;
-    grid-row-start: 2;
-    margin: 10px;
-    border:2px solid #bc4749;
+
+h2 {
+    font-size: 2rem;
+    
 }
 
-.column-1 {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    margin: 10px;
-}
-
-.column-2 {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    margin: 10px;
-}
-.adventure {
-    display: grid;
-    place-items: center;
-    border: 2px solid var(--accent1-color);
-    margin: 10px;
-    grid-template-columns: repeat(5,20%);
-    grid-template-rows: 20% 80%;
-
-}
-.adverture h2 {
-    font-size: 20pt;
-    grid-column: 1 / span 6;
-    grid-row: 1 / 2;
+.container {
+    font-size: 1rem;
+    color: whitesmoke;
+    padding: 1rem;
     text-align: center;
 }
-.adventure img {
-    grid-column: 1 / span 6;
-    grid-row: 2 / 3;
-    width: 200px;
-    height: auto;
-    border:2px solid var(--accent1-color);
+
+.image {
+    display: block;
+    margin: 0 auto 20px;
+    justify-content: center;
 }
 
+.text {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
 
+.adventure h2 {
+    text-align: center;
+}
+
+#image-container {
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+    justify-content: space-between;
+}
+
+figure {
+    box-sizing: border-box;
+    border: thin rgb(247, 247, 247) solid;
+    text-align: center;
+    width: 50%;
+}
 
 figure img {
     width: 100%;
@@ -198,62 +152,31 @@ figure img {
 }
 
 figcaption {
-    background-color: #6A994E;
-    color:#bc4749;
+    background-color: var(--accent1-color);
+    color: black;
     padding: 5px; 
-    text-align: center;
 }
 
-.social-media a {
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+}
+
+.sociallinks {
     position: absolute;
     top: 0;
     right: 20px;
+
 }
+
+.sociallinks a {
+    text-decoration: none;
+}
+
 .sociallinks img {
     width: 30px;
     margin-left: 10px;
 }
-footer {
-        display: grid;
-        place-items: center;
-        grid-template-columns: 70% 10% 10% 10%;
-        grid-template-rows: 70% 30%;
-        border: 1px solid #6A994E;
-        background-color: #BBBE64;
-        font-family: 'Robota Slab',serif;
-       
-    }
-    
-    .copyrights {
-        grid-column: 1/2;
-        grid-row: 1/3;
-        color:var(--primary-color);
-        font-size: 16pt;
-        font-weight: bold;
-        text-align: center;
-    }
-    
-    .facebook-logo {
-        grid-column: 2/3;
-        grid-row: 1/2;
-    }
-    .facebook {
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
-    .twitter-logo {
-        grid-column: 3/4;
-        grid-row: 1/2;
-    }
-    .twitter {
-        grid-column: 3/4;
-        grid-row: 2/3;
-    }
-    .instagram-logo {
-        grid-column: 4/5;
-        grid-row: 1/2;
-    }
-    .instagram {
-        grid-column: 4/5;
-        grid-row: 2/3;
-    }
