--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -179,3 +179,126 @@ footer {
     width: 30px;
     margin-left: 10px;
 }
+
+/*Contact page*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1 {
+    text-align: center;
+}
+
+.contact-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid white;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.company-info {
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+    color: white;
+}
+
+.map {
+    width: 60%;
+    float: right;
+    border: 0;
+    margin-left: auto;
+}
+
+.employee-profiles {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px
+}
+
+.employee-profile {
+    text-align: center;
+    color: white;
+}
+
+.employee-profile {
+    box-sizing: border-box;
+    border: 1px solid #0e0101;
+    padding: 30px;
+    width: 30%;
+    text-align: center;
+}
+
+.employee-profile img {
+    width: 90%;
+    height: 90%;
+    object-fit: cover;
+}
+
+.employee-profile p {
+    font-size: 1.3rem;
+}
+
+form {
+    width: 650px;
+    margin: 0 auto;
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    background-color: rgb(211, 230, 247);
+    display: grid;
+}
+
+fieldset {
+    display: grid;
+    grid-gap: 1.5rem;
+    margin: 1rem;
+    border: #001111;
+    padding: 1rem;
+}
+
+legend {
+    padding: 0.5rem;
+    color: #001111;
+    font-size: 1.3em;
+}
+
+label {
+    text-align: left;
+}
+
+input, textarea {
+    padding: 0.5rem;
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+
+input[type="checkbox"] {
+    width: 50px;
+    height: 20px;
+    vertical-align: bottom;
+}
+
+button {
+    margin: 1rem;
+    color: black;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.5rem; 
+}
+
+button:hover {
+    background-color: rgb(240, 89, 19);
+}
+
+a {
+    color: white;
+}
