--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -164,7 +164,7 @@ figure img {
 
 figcaption {
     background-color: var(--accent1-color);
-    color: black;
+    color: #001111;
     padding: 5px; 
 }
 
