--- a/styles/style.css
+++ b/styles/style.css
@@ -1,94 +1,89 @@
+:root {
+    --my-favorite-color:steelblue;
+} 
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-:root {
-    --background-color: steelblue;
-    --color: darkblue;
-    --padding: 1rem;
-    --border: 2px dotted black;
-}
 
-body {
-    font-family: Georgia;
-    
-}
 nav {
-    background-color: var(--background-color);
-    padding: var(--padding); 
+    background-color: steelblue;
+    padding: 10px;
+    padding: 1rem;
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-evenly;
+    font-size: 2rem;
+
 }
+
 nav a {
-    display: block;
-    text-decoration: none;
     color: white;
-    padding: var(--padding);
-    font-weight: bold;
-    font-size: 1.2rem;
+    display: block;
+    padding: 20px;
+
 }
+
 h1 {
-    font-family: Arial;
     color: steelblue;
-    border-bottom: 1px solid steelblue;
 }
-main img {
-    width: 150px;
-    height: auto;
-    border: var(--border);
-    padding: var(--padding);
-    box-shadow: 0 0 30px gray;
-    float: right;
+
+img {
+width: 150px;
+height: auto;
+border: 1px solid steelblue;
+padding: 2px;
+box-shadow: 0 0 30px gray;
 }
+
 p {
-    padding: 0;
+    padding: 10px;
 }
+
 main {
-    max-width: 840px;
-    grid-column: 2/4;
-    
+   max-width: 840px; 
 }
+
 aside {
-    width: 20rem;
+    width: 400px;
+    margin: 20px;
+    border: 15px;
+    padding: 15px;
+    background-color: lightblue;
+    color: #333;
     text-align: center;
-    position: relative;
-    grid-column: 1/2;
-    grid-row: 1/2
-}
 
-aside h2 {
-   position: absolute;
-   top: 80px;
-   left: 90px;
 }
-
 aside img {
     width: 200px;
     height: auto;
 }
-header, .grid, footer {
-    max-width: 840px;
-    margin: 0 auto;
+
+main img {
+    width: 150px;
+    height: auto;
+
+}
+
+p {
+    padding: 0;
 }
 
 footer {
     margin-top: 15px;
-    padding: var(--padding);
-    border-top: 1px solid black;
+    border-top: 1px solid #000;
     text-align: center;
 }
-.grid {
-    display: grid;
-    align-items: center;grid-template-columns: repeat(3,1fr);
-}
+
 /* Class Selectors */
 .box {
     margin: 1rem;
     border: 1px solid rgba(0,0,0,.1);
     padding: 2rem;
     background-color: peachpuff;
-    color: #ac3c16
+    color: black;
+   
 }
