--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,7 @@ footer {
     margin: 1rem;
     border: 1px solid rgba(0,0,0,.1);
     padding: 2rem;
-    background-color: peachpuff;
-    color: black;
+    background-color: #CAF0F8
+    
    
 }
